<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/PasswordInputBox"
        android:layout_width="302dp"
        android:layout_height="43dp"
        android:layout_marginEnd="67dp"
        android:layout_marginStart="67dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="text"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="7dp"
        android:orientation="horizontal"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

        <Button
            android:id="@+id/BtnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add" />

        <Button
            android:id="@+id/BtnUpdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update" />

        <Button
            android:id="@+id/BtnDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete" />
    </LinearLayout>

    <ListView
        android:id="@+id/ListPasswords"
        android:layout_width="368dp"
        android:layout_height="202dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/EncryptionKeyBox"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/encryption_key"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.517"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordInputBox" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="159dp"
        android:layout_height="47dp"
        android:layout_marginEnd="119dp"
        android:layout_marginStart="123dp"
        android:layout_marginTop="3dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EncryptionKeyBox">

        <Button
            android:id="@+id/EncBtn"
            android:layout_width="71dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="@string/encrypt"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="195dp" />

        <Button
            android:id="@+id/DecBtn"
            android:layout_width="71dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:text="@string/decrypt"
            android:textSize="12sp"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="195dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="367dp"
        android:layout_height="58dp"
        android:layout_marginEnd="9dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ListPasswords">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:text="@string/codebank"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="123dp"
            tools:layout_editor_absoluteY="501dp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="19dp"
            android:text="@string/arthur_lima"
            android:textAlignment="center"
            android:textStyle="italic"
            tools:layout_editor_absoluteX="123dp"
            tools:layout_editor_absoluteY="531dp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="258dp"
        android:layout_height="74dp"
        android:layout_marginEnd="63dp"
        android:layout_marginStart="63dp"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/lockimage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/lock" />

</android.support.constraint.ConstraintLayout>